fix: update notification bar z-index (#41160)
* fix: update notification bar z-index

* fix: update notification bar z-index to 100

* fix: update z-index to 100 in flash.css

--- a/client/src/components/Flash/flash.css
+++ b/client/src/components/Flash/flash.css
@@ -7,7 +7,7 @@
   padding-bottom: 3px;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .flash-message div {
